# multithreaded-file-transfer-scheduler-simulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  plot_results.py
.github/workflows/: ci.yml
data/: sample_requests.csv
docs/: experiment_report_template.md  sample_output.txt
include/: congestion.h  csv_utils.h  metrics.h  packet_scheduler.h  qos.h  queueing_model.h  request.h  scheduler.h  server.h  simulation.h  simulation_engine.h  socket_engine.h  thread_safe_queue.h  trace_replay.h  web_dashboard.h  worker_manager.h
scripts/: plot_summary.py
src/: congestion.cpp  csv_utils.cpp  main.cpp  metrics.cpp  packet_scheduler.cpp  qos.cpp  queueing_model.cpp  request.cpp  scheduler.cpp  server.cpp  simulation.cpp  simulation_engine.cpp  socket_engine.cpp  trace_replay.cpp  web_dashboard.cpp  worker_manager.cpp
tests/: test_simulator.cpp
